--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "primus_hapi_session",
+  "name": "hapi_primus_sessions",
   "version": "0.0.1",
   "description": "",
   "main": "index.js",
